--- a/JBombLauncher.vcxproj.filters
+++ b/JBombLauncher.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\frame_icon.ico">
+      <Filter>File di risorse</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
